...
    }


    var displayName: String {
        switch self {
        case .chineseEightBall: return "中八"
        case .nineBall: return "9 球"
        case .sixBall: return "6 球"
        case .fiveBall: return "5 球"
        case .fourBall: return "4 球"
        }
    }

...
